--- a/main.html
+++ b/main.html
@@ -5,9 +5,46 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
+<title>HTML Assignment 3</title>
 <body>
 	<!-- the entire body must be written by student -->
+	<h1 style="text-align:center;">HTML Assignment #3</h1>
+	<table id="table-1"class="middle" border="1"cellpassing="1">
+		<tr>
+    <td>left</td>
+    <td class="center">center</td>
+    <td class="right">right</td>
+  </tr>
+  <tr class="middle">
+    <td>left</td>
+    <td class="center" id="t1-c2">center</td>
+    <td class="right" id="t1-c3">right</td>
+  </tr>
+  <tr>
+    <td id="t1-c1">left</td>
+    <td class="center">center</td>
+    <td class="right">right</td>
+  </tr>
+</table>
+
+<!-- Table 2 -->
+<table id="table-2" class="middle" border="1" cellspacing="1" cellpadding="1">
+  <tr>
+    <td colspan="6" id="t2-1">First Cell</td>
+  </tr>
+  <tr><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+  <tr><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+  <tr><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+  <tr><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+  <tr><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+</table>
+
+<!-- Table 3 -->
+<table id="table-3" class="middle" border="1" cellspacing="1" cellpadding="1">
+  <tr class="green"><td colspan="3"></td></tr>
+  <tr><td></td><td id="t-image"><img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" width="200"></td><td></td></tr>
+  <tr class="blue"><td colspan="3"></td></tr>
+</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
