--- a/main.html
+++ b/main.html
@@ -17,8 +17,8 @@
   </tr>
   <tr class="middle">
     <td>left</td>
-    <td class="center" id="t1-c2">center</td>
-    <td class="right" id="t1-c3">right</td>
+    <td class="center" id="t12">center</td>
+    <td class="right" id="t13">right</td>
   </tr>
   <tr>
     <td id="t1-c1">left</td>
@@ -30,7 +30,7 @@
 <!-- Table 2 -->
 <table id="table-2" class="middle" border="1" cellspacing="1" cellpadding="1">
   <tr>
-    <td colspan="6" id="t2-1">First Cell</td>
+    <td colspan="6" id="t21">First Cell</td>
   </tr>
   <tr><td></td><td></td><td></td><td></td><td></td><td></td></tr>
   <tr><td></td><td></td><td></td><td></td><td></td><td></td></tr>
